--- a/python-server/.env.example
+++ b/python-server/.env.example
@@ -1,5 +1,5 @@
-DB_CLUSTER=cluster0.sdycyfj.mongodb.net/?retryWrites=true&w=majority
+DB_NAME=Gaurdian-Angel
 DB_USERNAME=
 DB_PASSWORD=
-
-DB_NAME=Gaurdian-Angel
+DB_CLUSTER=
+DB_URI=mongodb+srv://${DB_USERNAME}:${DB_PASSWORD}@${DB_CLUSTER}/${DB_NAME}?retryWrites=true&w=majority
