--- a/app/GuardianAngel/app/src/main/AndroidManifest.xml
+++ b/app/GuardianAngel/app/src/main/AndroidManifest.xml
@@ -13,6 +13,11 @@
         android:theme="@style/Theme.GuardianAngel"
         tools:targetApi="31">
         <activity
+            android:name=".UserDetails"
+            android:exported="false"
+            android:label="@string/title_activity_user_details"
+            android:theme="@style/Theme.GuardianAngel" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
