--- a/app/GuardianAngel/app/src/main/AndroidManifest.xml
+++ b/app/GuardianAngel/app/src/main/AndroidManifest.xml
@@ -10,13 +10,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.GuardianAngel"
-        tools:targetApi="31">
-        <activity
-            android:name=".UserDetails"
-            android:exported="false"
-            android:label="@string/title_activity_user_details"
-            android:theme="@style/Theme.GuardianAngel" />
+        android:theme="@style/Theme.GuardianAngel">
         <activity
             android:name=".MainActivity"
             android:exported="true">
