--- a/app/GuardianAngel/app/src/main/AndroidManifest.xml
+++ b/app/GuardianAngel/app/src/main/AndroidManifest.xml
@@ -17,6 +17,11 @@
         <activity
             android:name=".MainActivity"
             android:exported="true">
+        </activity>
+        <activity
+            android:name=".UserProfile"
+            android:exported="true"
+            android:theme="@style/Theme.GuardianAngel" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -24,7 +29,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".UserProfile"
+            android:name=".MyCycle"
             android:exported="false"
             android:theme="@style/Theme.GuardianAngel" ></activity>
     </application>
