--- a/app/GuardianAngel/app/src/main/AndroidManifest.xml
+++ b/app/GuardianAngel/app/src/main/AndroidManifest.xml
@@ -18,9 +18,9 @@
         android:theme="@style/Theme.GuardianAngel"
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
-        <receiver android:name=".AlarmReceiver" />
-        <receiver android:name=".AlarmNotificationHelper" />
-        <receiver android:name=".StopReceiver" />
+        <receiver android:name=".alarm.AlarmReceiver" />
+        <receiver android:name=".alarm.AlarmNotifier" />
+        <receiver android:name=".notification.StopReceiver" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
