--- a/app/GuardianAngel/app/src/main/AndroidManifest.xml
+++ b/app/GuardianAngel/app/src/main/AndroidManifest.xml
@@ -47,13 +47,11 @@
         <activity
             android:name=".MyCycle"
             android:exported="false"
-            android:theme="@style/Theme.GuardianAngel" ></activity>
+            android:theme="@style/Theme.GuardianAngel" />
         <activity
             android:name=".MainView"
             android:exported="false"
-            android:theme="@style/Theme.GuardianAngel" ></activity>
-
-
+            android:theme="@style/Theme.GuardianAngel" />
         <activity
             android:name=".AlarmActivity" />
 
