--- a/app/GuardianAngel/app/src/main/AndroidManifest.xml
+++ b/app/GuardianAngel/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
@@ -13,6 +14,9 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_CALENDAR" />
     <uses-permission android:name="android.permission.WRITE_CALENDAR" />
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
+    <uses-permission android:name="android.permission.USE_EXACT_ALARM"
+        tools:ignore="ExactAlarm" />
 
     <application
         android:allowBackup="true"
@@ -20,9 +24,11 @@
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:name=".GuardianAngel"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.GuardianAngel">
+
         <activity
             android:name=".StepsMonitor"
             android:exported="true"
@@ -45,6 +51,9 @@
             android:theme="@style/Theme.GuardianAngel" >
         </activity>
         <activity
+            android:name=".sleep_wellness.SleepWellnessMain"
+            android:exported="false"/>
+        <activity
             android:name=".MyCycle"
             android:exported="false"
             android:theme="@style/Theme.GuardianAngel" ></activity>
@@ -53,14 +62,23 @@
             android:exported="false"
             android:theme="@style/Theme.GuardianAngel" ></activity>
 
-
         <activity
             android:name=".AlarmActivity" />
+
+        <receiver android:name=".sleep_wellness.alarm.AlarmReceiver" />
+        <receiver android:name=".sleep_wellness.alarm.AlarmNotifier" />
+        <receiver android:name=".sleep_wellness.notification.StopReceiver" />
 
         <receiver
             android:name=".AlarmReceiver"
             android:enabled="true"
             android:exported="true" />
+
+        <activity
+            android:name=".Settings"
+            android:exported="false"
+            android:label="@string/title_activity_settings"
+            android:theme="@style/Theme.GuardianAngel.NoActionBar" />
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
