--- a/app/GuardianAngel/app/src/main/AndroidManifest.xml
+++ b/app/GuardianAngel/app/src/main/AndroidManifest.xml
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
 
-    <uses-permission android:name="android.permission.INTERNET" />
 
-    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
+
+    <uses-permission android:name="android.permission.INTERNET" />
+
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
+
     <uses-permission
         android:name="android.permission.WRITE_EXTERNAL_STORAGE"
         android:maxSdkVersion="32" />
@@ -24,7 +25,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.GuardianAngel">
         <activity
-            android:name=".SettingsActivity"
+            android:name=".Settings"
             android:exported="false"
             android:label="@string/title_activity_settings"
             android:theme="@style/Theme.GuardianAngel.NoActionBar" />
@@ -47,7 +48,7 @@
         </activity>
 
         <activity android:name=".UpdateActivity"></activity>
-
+        <activity android:name=".HealthStats"></activity>
     </application>
 
 </manifest>
