--- a/app/GuardianAngel/app/src/main/AndroidManifest.xml
+++ b/app/GuardianAngel/app/src/main/AndroidManifest.xml
@@ -53,7 +53,8 @@
         </activity>
         <activity
             android:name=".sleep_wellness.SleepWellnessMain"
-            android:exported="false"/>
+            android:exported="false"
+            android:theme="@style/Theme.GuardianAngel"/>
         <activity
             android:name=".MyCycle"
             android:exported="false"
@@ -61,10 +62,19 @@
         <activity
             android:name=".MainView"
             android:exported="false"
-            android:theme="@style/Theme.GuardianAngel" ></activity>
+            android:theme="@style/Theme.GuardianAngel" />
 
         <activity
-            android:name=".AlarmActivity" />
+            android:name=".AlarmActivity"
+            android:exported="false"
+            android:theme="@style/Theme.GuardianAngel"/>
+
+        <activity
+            android:name=".SleepInfo"
+            android:theme="@style/Theme.GuardianAngel"/>
+        <activity
+            android:name=".DietSuggest"
+            android:theme="@style/Theme.GuardianAngel"/>
 
         <receiver android:name=".sleep_wellness.alarm.AlarmReceiver" />
         <receiver android:name=".sleep_wellness.alarm.AlarmNotifier" />
@@ -98,8 +108,8 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".UpdateActivity"></activity>
-        <activity android:name=".HealthStats"></activity>
+        <activity android:name=".UpdateActivity" />
+        <activity android:name=".HealthStats" />
     </application>
 
 </manifest>
