Period Tracker UI update

--- a/app/GuardianAngel/app/src/main/AndroidManifest.xml
+++ b/app/GuardianAngel/app/src/main/AndroidManifest.xml
@@ -47,7 +47,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".UserProfile"
+            android:name=".CycleTrackingProfile"
             android:exported="true"
             android:theme="@style/Theme.GuardianAngel" >
         </activity>
