--- a/app/GuardianAngel/app/src/main/AndroidManifest.xml
+++ b/app/GuardianAngel/app/src/main/AndroidManifest.xml
@@ -110,6 +110,11 @@
 
         <activity android:name=".UpdateActivity" />
         <activity android:name=".HealthStats" />
+        <service
+            android:name="com.example.guardianangel.ForegroundOnlyLocationService"
+            android:enabled="true"
+            android:exported="false"
+            android:foregroundServiceType="location" />
     </application>
 
 </manifest>
