--- a/app/GuardianAngel/app/src/main/AndroidManifest.xml
+++ b/app/GuardianAngel/app/src/main/AndroidManifest.xml
@@ -64,6 +64,10 @@
             android:exported="false"
             android:theme="@style/Theme.GuardianAngel"/>
         <activity
+            android:name=".sleep_wellness.SleepWellnessStats"
+            android:exported="false"
+            android:theme="@style/Theme.GuardianAngel"/>
+        <activity
             android:name=".MyCycle"
             android:exported="false"
             android:theme="@style/Theme.GuardianAngel" />
