Demo alarm feature
Signed-off-by: Ashwin Elangovan <ashelangovan@gmail.com>

--- a/app/GuardianAngel/app/src/main/AndroidManifest.xml
+++ b/app/GuardianAngel/app/src/main/AndroidManifest.xml
@@ -101,6 +101,13 @@
             android:enabled="true"
             android:exported="true" />
 
+        <receiver
+            android:name=".sleep_wellness.alarm.DemoAlarmNotifier"
+            android:enabled="true"
+            android:exported="true" />
+
+        <receiver android:name=".sleep_wellness.notification.DemoStopReceiver" />
+
         <activity
             android:name=".Settings"
             android:exported="false"
